Fixed JEI integration