@@ -11,15 +11,16 @@ import com.brandon3055.draconicevolution.blocks.tileentity.TileFusionCraftingCor
 import com.brandon3055.draconicevolution.inventory.ContainerFusionCraftingCore;
 import com.brandon3055.draconicevolution.lib.WTFException;
 import com.brandon3055.draconicevolution.network.DraconicNetwork;
-import mezz.jei.api.gui.IRecipeLayout;
-import mezz.jei.api.gui.ingredient.IGuiIngredient;
-import mezz.jei.api.gui.ingredient.IGuiItemStackGroup;
+import mezz.jei.api.constants.VanillaTypes;
+import mezz.jei.api.gui.ingredient.IRecipeSlotView;
+import mezz.jei.api.gui.ingredient.IRecipeSlotsView;
 import mezz.jei.api.helpers.IStackHelper;
 import mezz.jei.api.ingredients.subtypes.UidContext;
+import mezz.jei.api.recipe.RecipeIngredientRole;
 import mezz.jei.api.recipe.transfer.IRecipeTransferError;
 import mezz.jei.api.recipe.transfer.IRecipeTransferHandler;
 import mezz.jei.api.recipe.transfer.IRecipeTransferHandlerHelper;
-import mezz.jei.common.util.Translator;
+import net.minecraft.client.resources.language.I18n;
 import net.minecraft.core.Direction;
 import net.minecraft.network.chat.TextComponent;
 import net.minecraft.network.chat.TranslatableComponent;
@@ -31,8 +32,9 @@ import net.minecraft.world.item.crafting.Ingredient;
 import net.minecraftforge.common.util.LazyOptional;
 import net.minecraftforge.items.CapabilityItemHandler;
 import net.minecraftforge.items.IItemHandler;
+import org.jetbrains.annotations.NotNull;
+import org.jetbrains.annotations.Nullable;
 
-import javax.annotation.Nullable;
 import java.util.*;
 import java.util.stream.Collectors;
 
@@ -50,18 +52,17 @@ public class FusionRecipeTransferHelper implements IRecipeTransferHandler<Contai
     }
 
     @Override
-    public Class<ContainerFusionCraftingCore> getContainerClass() {
+    public @NotNull Class<ContainerFusionCraftingCore> getContainerClass() {
         return ContainerFusionCraftingCore.class;
     }
 
     @Override
-    public Class<IFusionRecipe> getRecipeClass() {
+    public @NotNull Class<IFusionRecipe> getRecipeClass() {
         return IFusionRecipe.class;
     }
 
-    @Nullable
     @Override
-    public IRecipeTransferError transferRecipe(ContainerFusionCraftingCore container, IFusionRecipe recipe, IRecipeLayout recipeLayout, Player player, boolean maxTransfer, boolean doTransfer) {
+    public @Nullable IRecipeTransferError transferRecipe(@NotNull ContainerFusionCraftingCore container, @NotNull IFusionRecipe recipe, @NotNull IRecipeSlotsView recipeSlots, @NotNull Player player, boolean maxTransfer, boolean doTransfer) {
         TileFusionCraftingCore core = container.tile;
         core.updateInjectors();
 
@@ -86,9 +87,9 @@ public class FusionRecipeTransferHelper implements IRecipeTransferHandler<Contai
         coreStacks.add(core.getOutputStack());
 
         int inputCount = 0;
-        IGuiItemStackGroup itemStackGroup = recipeLayout.getItemStacks();
-        for (IGuiIngredient<ItemStack> ingredient : itemStackGroup.getGuiIngredients().values()) {
-            if (ingredient.isInput() && !ingredient.getAllIngredients().isEmpty()) {
+        List<IRecipeSlotView> slotViews = recipeSlots.getSlotViews();
+        for (IRecipeSlotView view : slotViews) {
+            if (view.getRole() == RecipeIngredientRole.INPUT && !view.isEmpty()) {
                 inputCount++;
             }
         }
@@ -116,14 +117,14 @@ public class FusionRecipeTransferHelper implements IRecipeTransferHandler<Contai
 
         // check if we have enough inventory space to shuffle items around to their final locations
         if (filledCraftSlotCount - inputCount > emptySlotCount) {
-            String message = Translator.translateToLocal("jei.tooltip.error.recipe.transfer.inventory.full");
+            String message = I18n.get("jei.tooltip.error.recipe.transfer.inventory.full");
             return handlerHelper.createUserErrorWithTooltip(new TextComponent(message));
         }
 
-        List<Integer> missingStacks = checkForMissingIngredients(stackHelper, availableItemStacks, itemStackGroup.getGuiIngredients());
+        List<IRecipeSlotView> missingStacks = checkForMissingIngredients(stackHelper, availableItemStacks, slotViews);
         if (missingStacks.size() > 0) {
-            String message = Translator.translateToLocal("jei.tooltip.error.recipe.transfer.missing");
-            return handlerHelper.createUserErrorForSlots(new TextComponent(message), missingStacks);
+            String message = I18n.get("jei.tooltip.error.recipe.transfer.missing");
+            return handlerHelper.createUserErrorForMissingSlots(new TextComponent(message), missingStacks);
         }
 
         if (doTransfer) {
@@ -133,15 +134,15 @@ public class FusionRecipeTransferHelper implements IRecipeTransferHandler<Contai
         return null;
     }
 
-    private List<Integer> checkForMissingIngredients(IStackHelper stackhelper, Map<Integer, ItemStack> availableItemStacks, Map<Integer, ? extends IGuiIngredient<ItemStack>> ingredientsMap) {
-        List<Integer> missing = new ArrayList<>();
-        SortedSet<Integer> keys = new TreeSet<>(ingredientsMap.keySet());
-        for (Integer key : keys) {
-            IGuiIngredient<ItemStack> ingredient = ingredientsMap.get(key);
-            if (!ingredient.isInput()) {
-                continue;
-            }
-            List<ItemStack> requiredStacks = ingredient.getAllIngredients();
+    private List<IRecipeSlotView> checkForMissingIngredients(IStackHelper stackhelper, Map<Integer, ItemStack> availableItemStacks, List<IRecipeSlotView> slotViews) {
+        List<IRecipeSlotView> missing = new ArrayList<>();
+        for (IRecipeSlotView slotView : slotViews) {
+            if (slotView.isEmpty() || slotView.getRole() != RecipeIngredientRole.INPUT) continue;
+
+            List<ItemStack> requiredStacks = slotView.getAllIngredients()
+                    .map(e -> e.getIngredient(VanillaTypes.ITEM_STACK).orElse(ItemStack.EMPTY))
+                    .filter(e -> !e.isEmpty())
+                    .toList();
             if (requiredStacks.isEmpty()) {
                 continue;
             }
@@ -177,8 +178,9 @@ public class FusionRecipeTransferHelper implements IRecipeTransferHandler<Contai
                     break;
                 }
             }
+
             if (!foundIngredient) {
-                missing.add(key);
+                missing.add(slotView);
             }
         }
         return missing;
@@ -251,7 +253,7 @@ public class FusionRecipeTransferHelper implements IRecipeTransferHandler<Contai
         List<IFusionInjector> injectors = fusionInv.getInjectors()
                 .stream()
                 .sorted(Comparator.comparing(e -> ((IFusionInjector) e).getInjectorTier().index).reversed())
-                .collect(Collectors.toList());
+                .toList();
 
         List<IFusionIngredient> ingredients = recipe.fusionIngredients();
         ;
